Now save new user to users collection in db, update routes, update doc
